<resources>
    <string name="app_name">Discussions</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="registration_success">Registration SuccessFul</string>
    <string name="error_user_not_created">Unable to create user</string>
    <string name="error_authentication_failed">Either email or password is wrong</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_user_already_exists">User already exists</string>
    <string name="msg_user_create">Please wait while creating user</string>
    <string name="error_required">Required</string>
    <string name="msg_success">Login success</string>
    <string name="error_general">Something went wrong</string>
    <string name="comments">Comments (%s)</string>
    <string name="like">Like (%s)</string>
    <string name="upvote">Upvote (%s)</string>
    <string name="replied">Replies (%s)</string>
    <string name="submit">Submit</string>
    <string name="msg_hint_add_comment">Write your thoughts here</string>
    <string name="msg_no_comments">No comments yet</string>
    <string name="add_comment">Add Comment</string>
    <string name="logout">Logout</string>
    <string name="share_via">Share via</string>
    <string name="today">Today</string>
    <string name="onboarding_msg_main">Every day A new topic will be published</string>
    <string name="let_start">Let\'s Start</string>
    <string name="next">Next</string>
    <string name="know_more">Know More</string>
</resources>
